fix activation first button, hix jump when menu fixed in top

--- a/css/header.css
+++ b/css/header.css
@@ -221,6 +221,7 @@ body {
   position: fixed;
   right: 0;
   left: 0;
+
 }
 
 .header-nav {
@@ -449,6 +450,10 @@ body {
   color: #fca53c;
 }
 
+.header-wrapper--fixedMenu{
+  margin-bottom: 50px;
+}
+
 @media screen and (min-width: 881px) {
   .header-mid-search-input {
     width: 250px;
@@ -592,7 +597,7 @@ body {
 
 @media screen and (max-width: 880px) {
   .header-wrapper {
-    margin: 30px 0;
+    padding: 30px 0;
   }
 
   .header-mid-logo {
